update index to just show plaintext

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LANControl</title>
-</head>
-<body>
-    LANControl works via API routes, this page has no content
-</body>
-</html>
+LANControl works via API routes, this page has no content.
